Fix line break on ios

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -129,8 +129,8 @@ section.tipp-login-page > .inner > p { font-size: 14px; margin-bottom: 10px;  }
 .game-tile > .t2.tflag { right: 15px; }
 .game-tile .result { position: relative; display: block; font-size: 25px; line-height: 25px; height: 25px; margin-bottom: -5px; font-weight: bold;  text-align: center; }
 .game-tile .meta { position: relative; display: block; font-size: 12px; line-height: 18px; height: 18px; text-align: center;}
-.game-tile .meta > .date { position: absolute; left: 0; top: 0; display: inline-block; opacity: 0.8; }
-.game-tile .meta > .tipps { position: absolute; right: 0; top: 0; display: inline-block; opacity: 0.8; }
+.game-tile .meta > .date { position: absolute; left: 0; top: 0; display: inline-block; opacity: 0.8; white-space: nowrap; }
+.game-tile .meta > .tipps { position: absolute; right: 0; top: 0; display: inline-block; opacity: 0.8; white-space: nowrap; }
 
 .game-tile .meta > .live-indicator { position: relative; display: inline-block; font-size: 10px; line-height: 14px; padding: 0 15px 0 3px; margin-top: 8px; border-radius: 4px; text-transform: uppercase; opacity: 0; visibility: hidden; color: #fff; background: #f00; font-weight: bold; }
 .game-tile .meta > .live-indicator:after { position: absolute; display: block; content: ''; top: 3px; right: 3px; width: 8px; height: 8px; border-radius: 50%; background: #fff; animation: live 2s linear infinite normal;}
@@ -333,6 +333,7 @@ section.tipp-login-page > .inner > p { font-size: 14px; margin-bottom: 10px;  }
 .tflag[data-t='tur'] { background-image: url(/img/flag/tur.png); }
 .tflag[data-t='ukr'] { background-image: url(/img/flag/ukr.png); }
 .tflag[data-t='wal'] { background-image: url(/img/flag/wal.png); }
+.tflag[data-t='bhr'] { background-image: url(/img/flag/bhr.png); }
 .tflag[data-t='aze'] { background-image: url(/img/flag/aze.png); }
 .tflag[data-t='smr'] { background-image: url(/img/flag/smr.png); }
 .tflag[data-t='svn'] { background-image: url(/img/flag/svn.png); }
